Fix: layout pixel on mobile screen.

--- a/Practice2-html-css/css/layouts/_dreamshare-steps.css
+++ b/Practice2-html-css/css/layouts/_dreamshare-steps.css
@@ -77,10 +77,10 @@
   }
 
   .second-step-img .step-content {
-    padding-top: 88px;
+    padding-top: 86px;
   }
 
   .step-content {
-    padding: 74px 30px 16px 20px;
+    padding: 72px 30px 16px 20px;
   }
 }
