--- a/Practice2-html-css/css/layouts/_partners.css
+++ b/Practice2-html-css/css/layouts/_partners.css
@@ -83,6 +83,6 @@
   }
 
   .partner-card:last-child {
-    margin-bottom: 26px;
+    margin-bottom: 25px;
   }
 }
